--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "next": "15.5.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
