--- a/package.json
+++ b/package.json
@@ -24,8 +24,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.16",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
-    "tailwindcss": "^4.1.16"
+    "jsdom": "^27.4.0",
+    "msw": "^2.12.7",
+    "tailwindcss": "^4.1.16",
+    "vitest": "^4.0.16"
   }
 }
