--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "framer-motion": "^12.23.24",
     "lodash": "^4.17.21",
     "lucide-react": "^0.552.0",
-    "next": "15.5.6",
+    "next": "^16.1.1",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-fast-marquee": "^1.6.5"
   },
   "devDependencies": {
